# libspdm

./: .clang-format  .gitignore  .gitmodules  .uncrustify.cfg  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md  REUSE.toml  SECURITY.md  VERSION.md  build.sh  libspdm.pc.in  sbom.cdx.json
cmockalib/: CMakeLists.txt
os_stub/: CMakeLists.txt
os_stub/armbuild_lib/: CMakeLists.txt  div64.c
os_stub/cryptlib_dummy/: CMakeLists.txt
os_stub/cryptlib_mbedtls/: CMakeLists.txt  internal_crypt_lib.h
os_stub/cryptlib_null/: CMakeLists.txt  internal_crypt_lib.h
os_stub/cryptlib_openssl/: CMakeLists.txt  internal_crypt_lib.h  key_context.h
os_stub/cryptlib_openssl3/: CMakeLists.txt  internal_crypt_lib.h
os_stub/debuglib/: CMakeLists.txt  debuglib.c
os_stub/debuglib_null/: CMakeLists.txt  debuglib.c
os_stub/malloclib/: CMakeLists.txt  malloclib.c
os_stub/mbedtlslib/: CMakeLists.txt  version.txt
os_stub/memlib/: CMakeLists.txt  compare_mem.c  copy_mem.c  set_mem.c  zero_mem.c
os_stub/openssl3lib/: CMakeLists.txt  der_digests_gen.c  der_rsa_gen.c  der_wrap_gen.c  ossl_store.c  process_files.pl  rand_pool.c  version.txt
os_stub/openssllib/: CMakeLists.txt  OpenSSL-HOWTO.txt  buildinf.h  ossl_store.c  process_files.pl  rand_pool.c  timer_wrapper.c  version.txt
os_stub/oqslib/: CMakeLists.txt
os_stub/platform_lib/: CMakeLists.txt  divtest.c  time_arm_sample.c  time_linux.c  time_sample.c  time_win.c  watchdog.c
os_stub/platform_lib_null/: CMakeLists.txt  time_linux.c  time_win.c  watchdog.c
os_stub/pqccryptlib_null/: CMakeLists.txt  mldsa_basic.c  mldsa_cert.c  mldsa_ext.c  mlkem.c
os_stub/pqccryptlib_oqs/: CMakeLists.txt  internal_pqccrypt_lib.h  mldsa_basic.c  mldsa_cert.c  mldsa_ext.c  mlkem.c  x509_cert.c
os_stub/rnglib/: CMakeLists.txt  rng_arm_sample.c  rng_linux.c  rng_std.c  rng_win.c
os_stub/rnglib_std/: CMakeLists.txt  rng.c
os_stub/sleeplib/: CMakeLists.txt  sleep_linux.c  sleep_win.c
os_stub/spdm_cert_verify_callback_sample/: CMakeLists.txt  spdm_cert_verify_callback.c  spdm_cert_verify_callback_internal.h
os_stub/spdm_crypt_ext_lib/: CMakeLists.txt  cryptlib_ext.h  spdm_crypt_ext.c  spdm_crypt_ext_lib.h  spdm_crypt_ext_pqc.c
os_stub/spdm_device_secret_lib/: CMakeLists.txt  cert.c  lib.c  spdm_device_secret_lib_internal.h
os_stub/spdm_device_secret_lib_null/: CMakeLists.txt  lib.c
os_stub/spdm_device_secret_lib_sample/: CMakeLists.txt  cert.c  chal.c  csr.c  csr_pqc.c  endpointinfo.c  event.c  get_cert.c  key_ex.c  key_pair.c  lib.c  meas.c  psk.c  raw_data_key.h  read_priv_key_pem.c  read_priv_key_pem_pqc.c  read_priv_key_raw_data.c  read_priv_key_raw_data_pqc.c  read_pub_cert.c  read_pub_cert_pqc.c  read_pub_key_der.c  read_pub_key_der_pqc.c  read_special_cert.c  set_cert.c  set_cert_pqc.c  sign.c  sign_pqc.c  slot_management.c  slot_management_internal.h  spdm_device_secret_lib_internal.h
os_stub/spdm_device_secret_lib_tpm/: CMakeLists.txt  chal.c  crypto_stub.c  crypto_stub_internal.h  csr.c  endpointinfo.c  event.c  key_pair.c  keys.h  lib.c  meas.c  measurment.c  psk.c  read_priv_key_pem.c  read_priv_key_raw_data.c  read_pub_cert.c  read_pub_cert_pqc.c  read_pub_key_der.c  read_special_cert.c  set_cert.c  sign.c  spdm_device_secret_lib_internal.h
os_stub/watchdoglib/: CMakeLists.txt  watchdog.c
unit_test/: CMakeLists.txt
unit_test/cmockalib/: CMakeLists.txt  strdup.c  strup.c  version.txt
unit_test/cryptlib_wrapper/: CMakeLists.txt
unit_test/fuzzing/: fuzzing.sh  fuzzing_AFL.sh  fuzzing_AFLTurbo.sh  fuzzing_AFLplusplus.sh  fuzzing_LibFuzzer.sh  oss_fuzz.sh  run_initial_seed.sh
unit_test/gen_pqc_key/: CMakeLists.txt  gen_pqc_key.c  os_support.c
unit_test/sample_key/: auto_gen_cert.sh  auto_gen_pqc_cert.sh  auto_gen_slot4_cert.sh  openssl.cnf  raw_data_key_gen.py  raw_data_key_gen_pqc.py  readme.txt
unit_test/spdm_transport_test_lib/: CMakeLists.txt  common.c  test.c
unit_test/spdm_unit_test_common/: algo.c  common.c  event_support.c  spdm_unit_test.h  support.c
unit_test/test_crypt/: CMakeLists.txt  aead_verify.c  dh_verify.c  ec_verify.c  ec_verify2.c  ecd_verify.c  ecd_verify2.c  ecx_verify.c  hash_verify.c  hkdf_verify.c  hmac_verify.c  mldsa_verify.c  mldsa_verify2.c  mlkem_verify.c  os_support.c  rand_verify.c  rsa_verify.c  rsa_verify2.c  slhdsa_verify.c  slhdsa_verify2.c  sm2_verify.c  sm2_verify2.c  test_crypt.c  test_crypt.h  x509_verify.c
unit_test/test_crypt_pqc/: CMakeLists.txt  kem_verify.c  os_support.c  sig_verify.c  test_crypt_pqc.c  test_crypt_pqc.h
unit_test/test_size/: README.md
unit_test/test_spdm_common/: CMakeLists.txt  context_data.c  support.c  test_spdm_common.c
unit_test/test_spdm_crypt/: CMakeLists.txt  test_spdm_crypt.c
unit_test/test_spdm_fips/: CMakeLists.txt  test_spdm_fips.c
unit_test/test_spdm_requester/: CMakeLists.txt  challenge.c  chunk_get.c  chunk_send.c  encap_certificate.c  encap_challenge_auth.c  encap_digests.c  encap_endpoint_info.c  encap_event_ack.c  encap_key_update.c  encap_key_update_ack.c  encap_request.c  encap_subscribe_event_types_ack.c  encap_supported_event_types.c  end_session.c  finish.c  get_capabilities.c  get_certificate.c  get_csr.c  get_digests.c  get_encapsulated_request.c  get_endpoint_info.c  get_event_types.c  get_key_pair_info.c  get_measurement_extension_log.c  get_measurements.c  get_supported_event_types.c  get_version.c  heartbeat.c  key_exchange.c  key_update.c  negotiate_algorithms.c  parse_measurement_transaction_data.c  psk_exchange.c  psk_finish.c  send_event.c  set_certificate.c  set_key_pair_info.c  slot_management.c  subscribe_event_types.c  (+3 more)
unit_test/test_spdm_responder/: CMakeLists.txt  algorithms.c  capabilities.c  certificate.c  challenge_auth.c  chunk_get.c  chunk_response.c  chunk_send_ack.c  csr.c  digests.c  encap_challenge.c  encap_get_certificate.c  encap_get_digests.c  encap_get_endpoint_info.c  encap_key_update.c  encap_response.c  encap_send_event.c  encap_supported_event_types.c  encapsulated_request.c  end_session.c  end_session_ack.c  endpoint_info.c  event_ack.c  finish.c  finish_rsp.c  heartbeat.c  (+23 more)
(+3691 files in other folders)
