cmake_minimum_required(VERSION 2.8.12)

if(CRYPTO STREQUAL "mbedtls")
    ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/cryptlib_mbedtls)
elseif(CRYPTO STREQUAL "openssl")
    ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/cryptlib_openssl)
endif()

ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/memlib)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/debuglib)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/debuglib_null)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/rnglib)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/malloclib)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/spdm_device_secret_lib_sample)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/spdm_device_secret_lib_null)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/cryptlib_null)
